fix the spacing for the whole website

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ body {
 #pageContainer {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     min-height: 100vh;
 }
 
@@ -137,7 +138,7 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    margin-top: auto;
+    /* margin-top: auto; */
     font-size: 20px;
 }
 
